Image source updated

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
         <!--Header shows logo and page title / dont confuse 'header' for 'head'-->        
-        <img src="/My-first-website/img/logo-96X96.svg" alt="blue origami bird">
+        <img src="/img/logo-96X96.svg" alt="blue origami bird">
 
         <h1>WEB DEV 1</h1>
 
@@ -22,7 +22,7 @@
         <!--The main evelops important page content-->
         <section>
             <!-- Hero section; dispalys profile, image, name and location-->
-            <img src="/My-first-website/img/avataaars.png" alt="my avataaars" width="200px" height="200px">
+            <img src="/img/avataaars.png" alt="my avataaars" width="200px" height="200px">
 
             <div>
                 <p>Patrick Pfunke</p>
@@ -64,11 +64,11 @@
 
             <ul>
                 <li>96' RX-7 Efini</li>
-                <img src="/My-first-website/img/Mazda_28FD2796.webp" alt="1996 RX-7 Efini" width="300px" height="200px">
+                <img src="/img/Mazda_28FD2796.webp" alt="1996 RX-7 Efini" width="300px" height="200px">
                 <li>97' mx-5 miata</li>
-                <img src="/My-first-website/img/1997-Mazda-MX-5 Miata.jpg" alt="1997 mx-5 miata" width="269px" height="200px">
+                <img src="/img/1997-Mazda-MX-5 Miata.jpg" alt="1997 mx-5 miata" width="269px" height="200px">
                 <li>92' Honda Acty</li>
-                <img src="/My-first-website/img/1992_honda_acty_truck.webp" alt="1992 Honda Acty" width="300px" height="200px">
+                <img src="/img/1992_honda_acty_truck.webp" alt="1992 Honda Acty" width="300px" height="200px">
             </ul>
         </section>
     </main>
