--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <!--Header shows logo and page title / dont confuse 'header' for 'head'-->        
         <img src="/img/logo-96X96.svg" alt="blue origami bird">
 
-        <h1>WEB DEV 1</h1>
+        <h1>About Me</h1>
 
     </header>
 
     <main>
         <!--The main evelops important page content-->
-        <section>
+        <section id="hero">
             <!-- Hero section; dispalys profile, image, name and location-->
-            <img src="/img/avataaars.png" alt="my avataaars" width="200px" height="200px">
+            <img src="/img/avataaars.png" alt="my avataaars">
 
             <div>
                 <p>Patrick Pfunke</p>
