updated background color and borders

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <!-- end of hero section-->
         </section>
 
-        <section>
+        <section id="bio">
             <!--bio section-->
             <div>
                 <p>I want to be. . .</p>
@@ -49,6 +49,7 @@
                     <li>talking with friends</li>
                 </ul>
             </div>
+            <p><a href="">bio link place holder</a></p>
         </section>
 
         <section>
@@ -64,7 +65,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="cars">
             <!--cars that I find intersting-->
             <p>List of some cars that I find interseting</p>
 
@@ -78,8 +79,10 @@
             </ul>
         </section>
     </main>
-    <p>
-        &copy; 2023 Pfunke 
-    </p>
+
+    <footer>
+        &copy; 2023 Pfunke
+
+    </footer>
 </body>
 </html>
