adding hobbies list

--- a/index.html
+++ b/index.html
@@ -51,18 +51,17 @@
             </div>
             <p><a href="">bio link place holder</a></p>
         </section>
+        <section id="hobbies">
+            <h2>My Hobbies:</h2>
+            <ul>
+                <li>Cars</li>
+                <li>video games</li>
+                <li>Movies</li>
+                <li>flying</li>
+                <li>computers</li>
+                <li>working on cars</li>
+            </ul>
 
-        <section>
-            <!--my interests-->
-            <div>
-                <p>Things I like Ordered from  most liked, to least</p>
-                <!--List of things I like-->
-                <ol>      
-                    <li>Cars</li>
-                    <li>Video games</li>
-                    <li>Movies</li>
-                </ol>
-            </div>
         </section>
 
         <section id="cars">
