adding phot gallery

--- a/index.html
+++ b/index.html
@@ -77,6 +77,25 @@
                 <img src="/img/1992_honda_acty_truck.webp" alt="1992 Honda Acty" width="300px" height="200px">
             </ul>
         </section>
+
+        <section id="gallery">
+            <h2>Photo gallery</h2>
+            <hr>
+            <figure>
+                <img src="/img/1970_mach_1_640w.jpg" alt="1970 mustang mach 1">
+                <figcaption>A picture of my fathers 1970 Mustang Mach 1 that he bought when he was my age.</figcaption>
+            </figure>
+            <hr>
+            <figure>
+                <img src="/img/Mustang_2_640w.jpg" alt="a mustang I saw at a car collection">
+                <figcaption>A picture of a mustang I saw at a car collection a couple years back.</figcaption>
+            </figure>
+            <hr>
+            <figure>
+                <img src="/img/oil_change_640w.jpg" alt="doing a oil change on my car">
+                <figcaption>A picture of me doing an oil change on my car.</figcaption>
+            </figure>
+        </section>
     </main>
 
     <footer>
