--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,16 +9,19 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Oswald&family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
 
     <!--The body element contains all content shown to the visitor-->
 
     <header>
-        <!--Header shows logo and page title / dont confuse 'header' for 'head'-->        
+        <!--Header shows logo and page title / dont confuse 'header' for 'head'-->
         <img src="/img/logo-96X96.svg" alt="blue origami bird">
 
         <h1>About Me</h1>
@@ -96,6 +100,68 @@
                 <figcaption>A picture of me doing an oil change on my car.</figcaption>
             </figure>
         </section>
+        <article id="lit">
+            <h2>working title</h2>
+            <div>
+                <p>"From Hatherley Farm-house to the Boscombe Pool is a quarter of a mile, and two people saw him as he
+                    passed over this ground. One was an old woman, whose name is not mentioned, and the other was
+                    William Crowder, a game-keeper in the employ of Mr. Turner. Both these witnesses depose that Mr.
+                    McCarthy was walking alone. The game-keeper adds that within a few minutes of his seeing Mr.
+                    McCarthy pass he had seen his son, Mr. James McCarthy, going the same way with a gun under his arm.
+                    To the best of his belief, the father was actually in sight at the time, and the son was following
+                    him. He thought no more of the matter until he heard in the evening of the tragedy that had
+                    occurred.</p>
+
+                <p>"The two McCarthys were seen after the time when William Crowder, the game-keeper, lost sight of
+                    them. The Boscombe Pool is thickly wooded round, with just a fringe of grass and of reeds round the
+                    edge. A girl of fourteen, Patience Moran, who is the daughter of the lodge-keeper of the Boscombe
+                    Valley estate, was in one of the woods picking flowers. She states that while she was there she saw,
+                    at the border of the wood and close by the lake, Mr. McCarthy and his son, and that they appeared to
+                    be having a violent quarrel. She heard Mr. McCarthy the elder using very strong language to his son,
+                    and she saw the latter raise up his hand as if to strike his father. She was so frightened by their
+                    violence that she ran away and told her mother when she reached home that she had left the two
+                    McCarthys quarrelling near Boscombe Pool, and that she was afraid that they were going to fight. She
+                    had hardly said the words when young Mr. McCarthy came running up to the lodge to say that he had
+                    found his father dead in the wood, and to ask for the help of the lodge-keeper. He was much excited,
+                    without either his gun or his hat, and his right hand and sleeve were observed to be stained with
+                    fresh blood. On following him they found the dead body stretched out upon the grass beside the pool.
+                    The head had been beaten in by repeated blows of some heavy and blunt weapon. The injuries were such
+                    as might very well have been inflicted by the butt-end of his son's gun, which was found lying on
+                    the grass within a few paces of the body. Under these circumstances the young man was instantly
+                    arrested, and a verdict of 'wilful murder' having been returned at the inquest on Tuesday, he was on
+                    Wednesday brought before the magistrates at Ross, who have referred the case to the next Assizes.
+                    Those are the main facts of the case as they came out before the coroner and the police-court."</p>
+
+                <p>"I could hardly imagine a more damning case," I remarked. "If ever circumstantial evidence pointed to
+                    a criminal it does so here."</p>
+
+                <p>"Circumstantial evidence is a very tricky thing," answered Holmes thoughtfully. "It may seem to point
+                    very straight to one thing, but if you shift your own point of view a little, you may find it
+                    pointing in an equally uncompromising manner to something entirely different. It must be confessed,
+                    however, that the case looks exceedingly grave against the young man, and it is very possible that
+                    he is indeed the culprit. There are several people in the neighbourhood, however, and among them
+                    Miss Turner, the daughter of the neighbouring landowner, who believe in his innocence, and who have
+                    retained Lestrade, whom you may recollect in connection with the Study in Scarlet, to work out the
+                    case in his interest. Lestrade, being rather puzzled, has referred the case to me, and hence it is
+                    that two middle-aged gentlemen are flying westward at fifty miles an hour instead of quietly
+                    digesting their breakfasts at home."</p>
+
+                <p>"I am afraid," said I, "that the facts are so obvious that you will find little credit to be gained
+                    out of this case."</p>
+
+                <p>"There is nothing more deceptive than an obvious fact," he answered, laughing. "Besides, we may
+                    chance to hit upon some other obvious facts which may have been by no means obvious to Mr. Lestrade.
+                    You know me too well to think that I am boasting when I say that I shall either confirm or destroy
+                    his theory by means which he is quite incapable of employing, or even of understanding. To take the
+                    first example to hand, I very clearly perceive that in your bedroom the window is upon the
+                    right-hand side, and yet I question whether Mr. Lestrade would have noted even so self-evident a
+                    thing as that."</p>
+            </div>
+
+
+
+        </article>
+
     </main>
 
     <footer>
@@ -103,4 +169,5 @@
 
     </footer>
 </body>
+
 </html>
