--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
             </ul>
 
         </section>
+        <h2 id="videoAttribute">A short video:</h2>
+        <section class="videoWrapper">
+            <!--section containing my video-->
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/HUL2s9xsqO8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </section>
+        <p id="videoCaption">Placeholder caption</p>
 
         <section id="cars">
             <!--cars that I find intersting-->
