add netlify form

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <section id="contact">
             <h2>Reach out:</h2>
 
-            <form method="post">
+            <form method="post" data-netlify="true">
                 <fieldset>
                     <legend>Contact form</legend>
                     <label for="name">Your Name:</label>
