--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h2 id="videoAttribute">A short video:</h2>
         <section class="videoWrapper">
             <!--section containing my video-->
-            <iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=aygcKdbeOfw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/aygcKdbeOfw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen ></iframe>
         </section>
         <p id="videoCaption">Placeholder caption</p>
 
