--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/nav.css">
 </head>
 
 <body>
@@ -22,9 +23,21 @@
 
     <header>
         <!--Header shows logo and page title / dont confuse 'header' for 'head'-->
-        <img src="/img/logo-96X96.svg" alt="blue origami bird">
-
-        <h1>About Me</h1>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="/img/logo-96X96.svg" alt="blue origami bird">
+                <h1>About Me</h1>
+            </div>
+            <div class="navbar-links">
+                <ul>
+                    <li><a href="#bio" class="navbar-links">Bio</a></li>
+                    <li><a href="#gallery" class="navbar-links">Gallery</a></li>
+                    <li><a href="#lit" class="navbar-links">Blog</a></li>
+                    <li><a href="#contact" class="navbar-links">Contact Me</a></li>
+                </ul>
+            </div>
+        </nav>
+        
 
     </header>
 
