--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!--Header shows logo and page title / dont confuse 'header' for 'head'-->
         <nav class="navbar">
             <div class="logo">
-                <img src="/img/logo-96X96.svg" alt="blue origami bird">
+                <img src="/img/finished_logo.svg" alt="P.P initials">
                 <h1>About Me</h1>
             </div>
             <div class="navbar-links">
@@ -45,7 +45,7 @@
         <!--The main evelops important page content-->
         <section id="hero">
             <!-- Hero section; dispalys profile, image, name and location-->
-            <img src="/img/avataaars.png" alt="my avataaars">
+            <img src="/img/avataaars.svg" alt="my avataaars">
 
             <div>
                 <p>Patrick Pfunke</p>
@@ -57,26 +57,21 @@
 
         <section id="bio">
             <!--bio section-->
+            <h2>My Bio</h2>
             <div>
-                <p>I want to be. . .</p>
-
-                <ul>
-                    <li>driving</li>
-                    <li>sleeping</li>
-                    <li>talking with friends</li>
-                </ul>
+                <p>I want to be able to successfully create a website that people enjoy looking at and find easy to manuveur.</p>
             </div>
-            <p><a href="">bio link place holder</a></p>
+            <!--<p><a href="">bio link place holder</a></p>-->
         </section>
         <section id="hobbies">
             <h2>My Hobbies:</h2>
             <ul>
-                <li>Cars</li>
-                <li>video games</li>
-                <li>Movies</li>
-                <li>flying</li>
-                <li>computers</li>
-                <li>working on cars</li>
+                <li>Cars<p>I enjoy driving cars alot, I first started being interested in cars when I was younger, with my dad taking me to car shows and explaining all the different types, then pointing out the different types of cars I would see on the road. </p></li>
+                <li>video games <p>Ive always taken an interest in video games ever since I was a kid, with my brother showing me new games and playing online with friends always proving to be a good time.</p></li>
+                <li>Movies <p>I personally enjoy watching movies more than shows because they show the entire story in a shorter span of time, and also bring back childhood memmories of going to the movie theater and getting popcorn.</p></li>
+                <li>flying<p>Flying may seem like an odd choice but since my father is an aircraft mechanic and always surrounded by planes, its hard not to like them, but being sealed in a plane is not as fun as an ultralight flight, with no cabin and no windshield its a lot more refreshing.</p></li>
+                <li>computers<p>Computer hardware has always been an intrest for me, with the components that rely on eachother in-order to properly work, with even a single error the whole system can shutdown, but something about them working in sync brings me joy.</p></li>
+                <li>working on cars<p>Ever since I was a kid my dad has always had me help work on his cars, whether it was holding the light or sticking my hands into hard to reach places to get the bolt he dropped, although I may not have thought it then, now looking back I see how important it was that I experienced it. </p></li>
             </ul>
 
         </section>
@@ -85,21 +80,9 @@
             <!--section containing my video-->
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/aygcKdbeOfw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen ></iframe>
         </section>
-        <p id="videoCaption">Placeholder caption</p>
+        <p id="videoCaption">This is a clip that I got while playing video games and figured it would fit nicely on this assignment.</p>
+        
 
-        <section id="cars">
-            <!--cars that I find intersting-->
-            <p>List of some cars that I find interseting</p>
-
-            <ul>
-                <li>96' RX-7 Efini</li>
-                <img src="/img/Mazda_28FD2796.webp" alt="1996 RX-7 Efini" width="300px" height="200px">
-                <li>97' mx-5 miata</li>
-                <img src="/img/1997-Mazda-MX-5 Miata.jpg" alt="1997 mx-5 miata" width="269px" height="200px">
-                <li>92' Honda Acty</li>
-                <img src="/img/1992_honda_acty_truck.webp" alt="1992 Honda Acty" width="300px" height="200px">
-            </ul>
-        </section>
 
         <section id="gallery">
             <h2>Photo gallery</h2>
