updated gallery effect and readme

--- a/index.html
+++ b/index.html
@@ -88,18 +88,24 @@
             <h2>Photo gallery</h2>
             <hr>
             <figure>
-                <img src="/img/1970_mach_1_640w.jpg" alt="1970 mustang mach 1">
-                <figcaption>A picture of my fathers 1970 Mustang Mach 1 that he bought when he was my age.</figcaption>
+                <div class="photohover">
+                    <img src="/img/1970_mach_1_640w.jpg" alt="1970 mustang mach 1">
+                    <div>A picture of my fathers 1970 Mustang Mach 1 that he bought when he was my age.</div>
+                </div>
             </figure>
             <hr>
             <figure>
+                <div class="photohover">
                 <img src="/img/Mustang_2_640w.jpg" alt="a mustang I saw at a car collection">
-                <figcaption>A picture of a mustang I saw at a car collection a couple years back.</figcaption>
+                <div>A picture of a mustang I saw at a car collection a couple years back.</div>
+                </div>
             </figure>
             <hr>
             <figure>
+                <div class="photohover">
                 <img src="/img/oil_change_640w.jpg" alt="doing a oil change on my car">
-                <figcaption>A picture of me doing an oil change on my car.</figcaption>
+                <div>A picture of me doing an oil change on my car.</div>
+                </div>
             </figure>
         </section>
         <article id="lit">
