updated hover effect

--- a/index.html
+++ b/index.html
@@ -87,25 +87,23 @@
         <section id="gallery">
             <h2>Photo gallery</h2>
             <hr>
-            <figure>
-                <div class="photohover">
+            <figure class="figurefx pushup">
                     <img src="/img/1970_mach_1_640w.jpg" alt="1970 mustang mach 1">
-                    <div>A picture of my fathers 1970 Mustang Mach 1 that he bought when he was my age.</div>
-                </div>
+                    <figcaption>picture of my fathers 1970 Mustang Mach 1 that he bought when he was my age.</figcaption> 
             </figure>
             <hr>
-            <figure>
-                <div class="photohover">
+            <figure class="figurefx pushup">
+
                 <img src="/img/Mustang_2_640w.jpg" alt="a mustang I saw at a car collection">
-                <div>A picture of a mustang I saw at a car collection a couple years back.</div>
-                </div>
+                <figcaption>picture of a mustang I saw at a car collection a couple years back.</figcaption> 
+
             </figure>
             <hr>
-            <figure>
-                <div class="photohover">
+            <figure class="figurefx pushup">
+
                 <img src="/img/oil_change_640w.jpg" alt="doing a oil change on my car">
-                <div>A picture of me doing an oil change on my car.</div>
-                </div>
+                <figcaption>picture of me doing an oil change on my car.</figcaption> 
+
             </figure>
         </section>
         <article id="lit">
