added hovering polish

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <figure class="figurefx pushup">
 
                 <img src="/img/oil_change_640w.jpg" alt="doing a oil change on my car">
-                <figcaption>picture of me doing an oil change on my car.</figcaption> 
+                <figcaption>picture of me doing an oil change on my car, This makes it the second oil change.</figcaption> 
 
             </figure>
         </section>
