--- a/index.html
+++ b/index.html
@@ -18,24 +18,26 @@
 </head>
 
 <body>
-
     <!--The body element contains all content shown to the visitor-->
 
     <header>
         <!--Header shows logo and page title / dont confuse 'header' for 'head'-->
-        <nav class="navbar">
+        <nav class="nav">
             <div class="logo">
                 <img src="/img/finished_logo.svg" alt="P.P initials">
                 <h1>About Me</h1>
             </div>
-            <div class="navbar-links">
-                <ul>
-                    <li><a href="#bio" class="navbar-links">Bio</a></li>
-                    <li><a href="#gallery" class="navbar-links">Gallery</a></li>
-                    <li><a href="#lit" class="navbar-links">Blog</a></li>
-                    <li><a href="#contact" class="navbar-links">Contact Me</a></li>
-                </ul>
-            </div>
+            <input type="checkbox" id="nav__checkbox" class="nav__checkbox">
+            <label for="nav__checkbox" class="nav__toggle">
+                <img src="/img/Hamburger_icon.svg">
+            </label>
+            <ul class="nav__menu">
+                <li><a href='#bio'>Bio</a></li>
+                <li><a href='#gallery'>Gallery</a></li>
+                <li><a href='#lit'>Blog</a></li>
+                <li><a href='#contact'>Contact Me</a></li>
+    
+            </ul>
         </nav>
         
 
@@ -107,61 +109,19 @@
             </figure>
         </section>
         <article id="lit">
-            <h2>working title</h2>
+            <h2>Image hover effects in CSS</h2>
             <div>
-                <p>"From Hatherley Farm-house to the Boscombe Pool is a quarter of a mile, and two people saw him as he
-                    passed over this ground. One was an old woman, whose name is not mentioned, and the other was
-                    William Crowder, a game-keeper in the employ of Mr. Turner. Both these witnesses depose that Mr.
-                    McCarthy was walking alone. The game-keeper adds that within a few minutes of his seeing Mr.
-                    McCarthy pass he had seen his son, Mr. James McCarthy, going the same way with a gun under his arm.
-                    To the best of his belief, the father was actually in sight at the time, and the son was following
-                    him. He thought no more of the matter until he heard in the evening of the tragedy that had
-                    occurred.</p>
+                <p>Image hover effects are effects used to show animation in a website's visuals, they make the site more interesting and interactive allowing the viewer to have more fun and spend more time on the site.</p>
 
-                <p>"The two McCarthys were seen after the time when William Crowder, the game-keeper, lost sight of
-                    them. The Boscombe Pool is thickly wooded round, with just a fringe of grass and of reeds round the
-                    edge. A girl of fourteen, Patience Moran, who is the daughter of the lodge-keeper of the Boscombe
-                    Valley estate, was in one of the woods picking flowers. She states that while she was there she saw,
-                    at the border of the wood and close by the lake, Mr. McCarthy and his son, and that they appeared to
-                    be having a violent quarrel. She heard Mr. McCarthy the elder using very strong language to his son,
-                    and she saw the latter raise up his hand as if to strike his father. She was so frightened by their
-                    violence that she ran away and told her mother when she reached home that she had left the two
-                    McCarthys quarrelling near Boscombe Pool, and that she was afraid that they were going to fight. She
-                    had hardly said the words when young Mr. McCarthy came running up to the lodge to say that he had
-                    found his father dead in the wood, and to ask for the help of the lodge-keeper. He was much excited,
-                    without either his gun or his hat, and his right hand and sleeve were observed to be stained with
-                    fresh blood. On following him they found the dead body stretched out upon the grass beside the pool.
-                    The head had been beaten in by repeated blows of some heavy and blunt weapon. The injuries were such
-                    as might very well have been inflicted by the butt-end of his son's gun, which was found lying on
-                    the grass within a few paces of the body. Under these circumstances the young man was instantly
-                    arrested, and a verdict of 'wilful murder' having been returned at the inquest on Tuesday, he was on
-                    Wednesday brought before the magistrates at Ross, who have referred the case to the next Assizes.
-                    Those are the main facts of the case as they came out before the coroner and the police-court."</p>
+                <p>Hover effects can take many forms, such as buttons and links but the most creative form is image hovers, while hovering over an image you can make it take many forms, Image hover effects are a way to spice up your images and make your website feel more fun and hi-tech. Some simple hover effects could include Grayscale to Color, fade in images, growing animations, shrinking animations, square images to circle images, a 3D shadow effect, adding a border around our images, blurring the image, we can even change the orientation of the image by rotating it, we can even brighten up an image upon hover.</p>
 
-                <p>"I could hardly imagine a more damning case," I remarked. "If ever circumstantial evidence pointed to
-                    a criminal it does so here."</p>
+                <p>All these effects can be done with some simple coding and can have a large impact on the outlook of your website. Adding hover effects into your website makes it easier for the reader to know where to click. There are many places to find these animations pre-made, probably locked behind a paywall to access them, but it can be a useful tool for those needing animations. Hover effects have a high payoff when implemented with a low cost of effort, which is mainly the reason behind them being one of the most used effects on websites.</p>
 
-                <p>"Circumstantial evidence is a very tricky thing," answered Holmes thoughtfully. "It may seem to point
-                    very straight to one thing, but if you shift your own point of view a little, you may find it
-                    pointing in an equally uncompromising manner to something entirely different. It must be confessed,
-                    however, that the case looks exceedingly grave against the young man, and it is very possible that
-                    he is indeed the culprit. There are several people in the neighbourhood, however, and among them
-                    Miss Turner, the daughter of the neighbouring landowner, who believe in his innocence, and who have
-                    retained Lestrade, whom you may recollect in connection with the Study in Scarlet, to work out the
-                    case in his interest. Lestrade, being rather puzzled, has referred the case to me, and hence it is
-                    that two middle-aged gentlemen are flying westward at fifty miles an hour instead of quietly
-                    digesting their breakfasts at home."</p>
+                <p>If you want to, try going to a popular website or one of your choosing and look out for hover effects, Im sure it won't take long to identify one if not multiple. Another example of this is in news articles that often advertise subscriptions, for example when you access a site and try to leave there is a pop-up that tries to get you to subscribe to their service. Interactions between the user and the website is a very important part of any site, keeping users engaged and encouraging them to spend more time exploring and pressing buttons.</p>
 
-                <p>"I am afraid," said I, "that the facts are so obvious that you will find little credit to be gained
-                    out of this case."</p>
+                <p>The image hover effect I wanted to focus on was a way to display the text while hovering over a photo, since in this project we have descriptions under each photo, instead of a simple zoom-in or tilt, so the method I used was to shift the figure caption up by -100%, this moves the figure captions out of the hidden view and into view. If you were to mess with the translation percentage and set it to a higher percentage, it is possible that the figure caption could be displayed prior to hovering over the image.</p>
 
-                <p>"There is nothing more deceptive than an obvious fact," he answered, laughing. "Besides, we may
-                    chance to hit upon some other obvious facts which may have been by no means obvious to Mr. Lestrade.
-                    You know me too well to think that I am boasting when I say that I shall either confirm or destroy
-                    his theory by means which he is quite incapable of employing, or even of understanding. To take the
-                    first example to hand, I very clearly perceive that in your bedroom the window is upon the
-                    right-hand side, and yet I question whether Mr. Lestrade would have noted even so self-evident a
-                    thing as that."</p>
+                <p>Another form of hover effect that I was attempting to use was to hover over and darken the image and display text, but this required the use of divs, but this doesn't work well with the way I chose to display the gallery, and would often break the structure of the gallery section, so I had to abort that idea and move onto another version that could be easily implemented into the structure of my code. An example of this is shown above in the gallery section, displaying how after hovering over each image the text is shown. </p>
             </div>
 
 
@@ -205,6 +165,7 @@
 
     <footer>
         &copy; 2023 Pfunke
+        <a href="https://github.com/RVCC-IDMX/about-me-PatrickPfunke">My Github Repo</a>
 
     </footer>
 </body>
